--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GreenForce</string>
+    <string name="app_uuid">a3d56928-fe48-4ad7-83d4-bf0d72ec9538</string>
     <string name="login_page_header">
         Saw garbage?\nTake a photo.Invite friends.\nClean together and earn points.
     </string>
@@ -28,6 +29,7 @@
     <string name="EditProfile">Edit</string>
     <string name="my_profile">Account</string>
     <string name="edit">Edit</string>
+    <string name="bluetooth">Bluetooth</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -50,5 +52,6 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_add_friends_via_bluetooth">AddFriendsViaBluetoothActivity</string>
+    <string name="loading">Loading...</string>
 
 </resources>
