--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -53,5 +53,7 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_add_friends_via_bluetooth">AddFriendsViaBluetoothActivity</string>
     <string name="loading">Loading...</string>
+    <string name="radius">Radius:</string>
+    <string name="maps">Maps</string>
 
 </resources>
