--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -66,5 +66,8 @@
         <item>Me</item>
         <item>All users</item>
     </string-array>
+    <string name="title_activity_events">EventsActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 
 </resources>
