--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -77,5 +77,30 @@
     <string name="event_type">Type:</string>
     <string name="event_description">Description:</string>
     <string name="event">Event</string>
-
+    <string name="about_categories">
+        Land pollution - Garbage is at inappropriate place somewhere in nature.<br/><br/>
+        Water pollution - Garbage is in the river,lake or other water areas.<br/><br/>
+        Reforestation - Forest was either burnt down by wildfire(or on purpose) or trees were cut down.<br/><br/>
+        Others - An event that doesn't belong in any of above named categories.
+    </string>
+    <string name="about_events">
+        Every event has certain amount of points that you will
+        collect once you complete it. You can invite friends to help you
+        which will bring you additional points.<br/><br/>
+        Duration of each event is 2 weeks. If you don't finish it in
+        that period, you won't get any points and your post will be removed.<br/>
+        Event can be abandoned. In that case you will lose 30 points. If you were leader, new
+        one will become volunteer with maximum points.
+    </string>
+    <string name="upload_photo">Upload photo</string>
+    <string name="select_categories">Select categories:</string>
+    <string name="land_pollution_50pts">Land pollution - 50pts</string>
+    <string name="water_pollution_100pts">Water pollution - 100pts</string>
+    <string name="reforestation_200pts">Reforestation - 200pts</string>
+    <string name="other_30pts">Other - 30pts</string>
+    <string name="points">Points:</string>
+    <string name="location">Location</string>
+    <string name="description">Description:</string>
+    <string name="event_about">About</string>
+    <string name="mark_a_spot">Mark a spot</string>
 </resources>
