--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="event_info">Info</string>
     <string name="event_photos">Photos</string>
     <string name="event_volunteers">Volunteers</string>
-    <string name="posted_by">Posted by:</string>
+    <string name="posted_by">Posted by :</string>
     <string name="status">Status</string>
     <string name="event_type">Type:</string>
     <string name="event_description">Description:</string>
@@ -114,5 +114,19 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="events">Events</string>
+    <string name="filters">Filters</string>
+    <string name="clear_all">Clear all</string>
+    <string name="posted_by_filters">Posted by</string>
+    <string name="points_range">Points range :</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="city">City :</string>
+    <string name="types">Types :</string>
+    <string name="water_pollution">Water pollution</string>
+    <string name="land_pollution">Land pollution</string>
+    <string name="reforestation">Reforestation</string>
+    <string name="other">Other</string>
+    <string name="apply">Apply</string>
+
 
 </resources>
