--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="leader">Leader</string>
     <string name="currentEvents">Current events</string>
     <string name="submit">Submit</string>
+    <string name="event_request">Event Request</string>
 
 
 </resources>
