--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="currentEvents">Current events</string>
     <string name="submit">Submit</string>
     <string name="event_request">Event Request</string>
+    <string name="services">Services</string>
 
 
 </resources>
