--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -139,6 +139,9 @@
     <string name="submit">Submit</string>
     <string name="event_request">Event Request</string>
     <string name="services">Services</string>
+    <string name="before">Before</string>
+    <string name="after">After</string>
+    <string name="review">Review</string>
 
 
 </resources>
