--- a/GreenForce/app/src/main/res/values/strings.xml
+++ b/GreenForce/app/src/main/res/values/strings.xml
@@ -82,13 +82,13 @@
         Others - An event that doesn\'t belong in any of above named categories.
     </string>
     <string name="about_events">
-        Every event has certain amount of points that you will
-        collect once you complete it. You can invite friends to help you
-        which will bring you additional points.<br /><br />
-        Duration of each event is 2 weeks. If you don\'t finish it in
-        that period, you won\'t get any points and your post will be removed.<br />
-        Event can be abandoned. In that case you will lose 30 points. If you were leader, new
-        one will become volunteer with maximum points.
+<!--        Every event has certain amount of points that you will-->
+<!--        collect once you complete it. You can invite friends to help you-->
+<!--        which will bring you additional points.<br /><br />-->
+<!--        Duration of each event is 2 weeks. If you don\'t finish it in-->
+<!--        that period, you won\'t get any points and your post will be removed.<br />-->
+<!--        Event can be abandoned. In that case you will lose 30 points. If you were leader, new-->
+<!--        one will become volunteer with maximum points.-->
     </string>
     <string name="upload_photo">Upload photo</string>
     <string name="select_categories">Select categories:</string>
